@@ -22,7 +22,7 @@ option(enable_ns3    "Whether ns3 model is activated." off)
 option(enable_lua "Whether the lua bindings are activated." off)
 option(enable_compile_warnings "Whether compilation warnings should be turned into errors." off)
 option(enable_maintainer_mode "Whether flex and flexml files should be rebuilt." off)
-option(enable_tracing "Tracing simulations for visualization." off)
+option(enable_tracing "Tracing simulations for visualization." on)
 option(enable_latency_bound_tracking "" off)
 option(enable_coverage "Enable coverage." off)
 option(enable_memcheck "Enable memcheck." off)
